[package]
name = "ndarray-dsp"
version = "0.1.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["ndarray", "dsp", "scientific"]
categories = ["Science", "Multimedia"]
edition = "2018"

[dependencies]
ndarray = "0.12"
num-traits = "0.2"
rustfft = "3.0.0"
rustdct = "0.4.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
