[package]
name = "ndarray-dsp"
version = "0.1.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["ndarray", "dsp", "scientific"]
categories = ["Science", "Multimedia"]
edition = "2018"

[dependencies]
ndarray = "0.14"
num-traits = "0.2"
rustfft = "4.0.0"
rustdct = "0.5.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
